Verbessere Titel und Metriken für OpenAI/Gemini

--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mini LLM Gateway</title>
+    <title>LLM Performance Vergleich</title>
     <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
     <main class="container">
-      <h1>Mini LLM Gateway</h1>
+      <h1>LLM Performance Vergleich</h1>
       <p class="subtitle">Paralleler Vergleich von OpenAI GPT‑5.2 und Gemini 3 Flash inkl. Thinking-Option.</p>
 
       <section class="controls">
